--- a/trainy/index.html
+++ b/trainy/index.html
@@ -576,8 +576,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🛡 DefenX</h1>
-            <p>AI-powered protection against malicious banking applications</p>
+            <h1>🔒 DefenX</h1>
+           
         </div>
 
         <div class="nav-tabs">
